--- a/iptv-input.html
+++ b/iptv-input.html
@@ -226,6 +226,23 @@
                 padding: 20px;
             }
         }
+
+        /* Loading spinner animation */
+        .loading {
+            display: inline-block;
+            width: 16px;
+            height: 16px;
+            border: 2px solid rgba(255, 255, 255, 0.3);
+            border-radius: 50%;
+            border-top-color: white;
+            animation: spin 1s ease-in-out infinite;
+            vertical-align: middle;
+            margin-right: 8px;
+        }
+
+        @keyframes spin {
+            to { transform: rotate(360deg); }
+        }
     </style>
     <script>
         // Language translations
