--- a/weargb-input.html
+++ b/weargb-input.html
@@ -539,7 +539,7 @@
                 authDomain: "weargb.firebaseapp.com",
                 databaseURL: "https://weargb-default-rtdb.firebaseio.com",
                 projectId: "weargb",
-                storageBucket: "weargb.appspot.com",
+                storageBucket: "weargb.firebasestorage.app",
                 messagingSenderId: "480332250386",
                 appId: "1:480332250386:web:81b32c72fef88e759747cb"
             });
@@ -848,9 +848,20 @@
                 
             } catch (error) {
                 console.error('Upload error:', error);
-                showModal('error', 'Upload Failed', 
-                    'Could not upload ROM. Error: ' + error.message,
-                    true);
+                
+                // Check if it's a CORS error
+                if (error.code === 'storage/unauthorized' || error.code === 'storage/retry-limit-exceeded' || error.message.includes('CORS')) {
+                    showModal('error', 'Upload Service Unavailable', 
+                        'File upload is temporarily unavailable due to CORS configuration. Please use a direct URL instead:\n\n' +
+                        '1. Upload your ROM to Google Drive, Dropbox, or GitHub\n' +
+                        '2. Get a direct download link\n' +
+                        '3. Paste the link in the URL field above',
+                        true);
+                } else {
+                    showModal('error', 'Upload Failed', 
+                        'Could not upload ROM. Error: ' + error.message + '\n\nTry using a direct URL instead.',
+                        true);
+                }
                 event.target.value = '';
             }
         }
