Fix Firebase configuration for wearGB feedback

--- a/weargb-feedback.html
+++ b/weargb-feedback.html
@@ -230,13 +230,13 @@
     <script>
         // Firebase configuration
         const firebaseConfig = {
-            apiKey: "AIzaSyBqS-5CNJTc5kyfNPU7lzaV_gvwMuY-hQU",
-            authDomain: "weargb-e073a.firebaseapp.com",
-            databaseURL: "https://weargb-e073a-default-rtdb.firebaseio.com",
-            projectId: "weargb-e073a",
-            storageBucket: "weargb-e073a.appspot.com",
-            messagingSenderId: "559309411862",
-            appId: "1:559309411862:web:f2c9e9b9e9e9e9e9e9e9e9"
+            apiKey: "AIzaSyDmJscxLCqL4FegLbhPU3c9v1Ilr-b5Ans",
+            authDomain: "weargb.firebaseapp.com",
+            databaseURL: "https://weargb-default-rtdb.firebaseio.com",
+            projectId: "weargb",
+            storageBucket: "weargb.firebasestorage.app",
+            messagingSenderId: "480332250386",
+            appId: "1:480332250386:web:abc123def456"
         };
         
         // Initialize Firebase
